[gd_scene load_steps=32 format=3 uid="uid://cttfwb8i8q8rt"]

[ext_resource type="Script" path="res://Entities/Player/player.gd" id="1_aspn1"]
[ext_resource type="PackedScene" uid="uid://b83li0pmk14ig" path="res://Assets/PlayerPlaceholder/player_placeholder.glb" id="2_ccvqu"]
[ext_resource type="PackedScene" uid="uid://dn7epji6caa1j" path="res://Components/Interaction/interaction.tscn" id="8_h7bub"]
[ext_resource type="Script" path="res://Entities/Player/reticle.gd" id="9_7s5t5"]
[ext_resource type="Resource" uid="uid://bm62m3vd0gxba" path="res://Items/Weapon/Weapons/Deagle/deagle.tres" id="10_mxeln"]
[ext_resource type="AudioStream" uid="uid://ddyfgukjw7t7s" path="res://Entities/Player/Mud Footsteps.mp3" id="10_oiv7x"]
[ext_resource type="Texture2D" uid="uid://bupr8fq7yqim3" path="res://Entities/Player/hand.png" id="10_rvh3j"]
[ext_resource type="AudioStream" uid="uid://b53kjlg0tys6s" path="res://Entities/Player/whoosh.mp3" id="11_wv8js"]
[ext_resource type="Texture2D" uid="uid://cymqp2xn71fc" path="res://Entities/Player/speech_bubble.png" id="13_qr65u"]
[ext_resource type="PackedScene" uid="uid://b8s4t6os7qwbm" path="res://Items/Weapon/weapon_manager.tscn" id="14_jbyi8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cojj7"]
radius = 0.15

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i8m8f"]
animation = &"crouch idle"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_xjior"]
blend_point_0/node = SubResource("AnimationNodeAnimation_i8m8f")
blend_point_0/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pt4st"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_craw0"]
animation = &"run forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x4hf1"]
animation = &"run strafe right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ncd6r"]
animation = &"run strafe left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pxuxj"]
animation = &"walk back"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_x2ub1"]
blend_point_0/node = SubResource("AnimationNodeAnimation_pt4st")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_craw0")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_x4hf1")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ncd6r")
blend_point_3/pos = Vector2(-1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_pxuxj")
blend_point_4/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n8s5e"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pgs31"]
animation = &"walk forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yrkw6"]
animation = &"strafe left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f1yco"]
animation = &"strafe right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7k2ss"]
animation = &"walk back"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7chcd"]
blend_point_0/node = SubResource("AnimationNodeAnimation_n8s5e")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_pgs31")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_yrkw6")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_f1yco")
blend_point_3/pos = Vector2(1, 0)
blend_point_4/node = SubResource("AnimationNodeAnimation_7k2ss")
blend_point_4/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_om5c3"]
animation = &"fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_quqfu"]
animation = &"t-pose"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qid5j"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_1i2b7"]
states/Crouch/node = SubResource("AnimationNodeBlendSpace2D_xjior")
states/Crouch/position = Vector2(361, 164)
states/Run/node = SubResource("AnimationNodeBlendSpace2D_x2ub1")
states/Run/position = Vector2(319, -20)
states/Start/position = Vector2(178, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_7chcd")
states/Walk/position = Vector2(373, 59)
states/fall/node = SubResource("AnimationNodeAnimation_om5c3")
states/fall/position = Vector2(608, 59)
states/t-pose/node = SubResource("AnimationNodeAnimation_quqfu")
states/t-pose/position = Vector2(137, -19)
transitions = ["Start", "t-pose", SubResource("AnimationNodeStateMachineTransition_qid5j")]
graph_offset = Vector2(-150, -128)

[sub_resource type="SphereShape3D" id="SphereShape3D_556q7"]

[sub_resource type="GDScript" id="GDScript_mdawi"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	var weapon_manager = $\"..\"
	if weapon_manager.current_weapon:
		self.text = str(weapon_manager.current_weapon.current_amo) + \" / \" + str(weapon_manager.current_weapon.reserve_amo)
"

[node name="Player" type="CharacterBody3D"]
platform_on_leave = 2
script = ExtResource("1_aspn1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_cojj7")

[node name="WorldModel" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="YBotContainer" type="Node3D" parent="WorldModel"]
transform = Transform3D(-1.1, 0, -9.61651e-08, 0, 1.1, 0, 9.61651e-08, 0, -1.1, 0, 0, 0)

[node name="Y-Bot" parent="WorldModel/YBotContainer" instance=ExtResource("2_ccvqu")]

[node name="Skeleton3D" parent="WorldModel/YBotContainer/Y-Bot/Armature_019" index="0"]
bones/0/position = Vector3(-3.30172e-05, 5.16213e-05, -99.7919)
bones/0/rotation = Quaternion(-0.707107, 2.97907e-05, 3.227e-05, 0.707107)
bones/1/rotation = Quaternion(-0.0607302, 2.29837e-08, 5.87001e-06, 0.998154)
bones/2/rotation = Quaternion(0.000196138, 3.0962e-12, -9.31616e-06, 1)
bones/3/position = Vector3(5.25485e-10, 13.4588, -1.15309e-06)
bones/3/rotation = Quaternion(0.0577117, 2.19582e-06, 3.28513e-06, 0.998333)
bones/4/position = Vector3(2.54811e-05, 15.0278, 0.877907)
bones/4/rotation = Quaternion(0.00282766, 1.77473e-12, -2.93372e-11, 0.999996)
bones/5/rotation = Quaternion(-6.06182e-09, 1.47156e-13, 1.4551e-11, 1)
bones/7/position = Vector3(6.10582, 9.10629, 0.757063)
bones/7/rotation = Quaternion(-0.453869, -0.544821, 0.551167, -0.439759)
bones/8/position = Vector3(-4.4889e-07, 12.9223, 3.67336e-06)
bones/8/rotation = Quaternion(-0.0104713, -0.00106493, 0.101149, 0.994816)
bones/9/position = Vector3(-3.06301e-07, 27.4047, -7.87434e-06)
bones/9/rotation = Quaternion(5.90128e-07, -6.6465e-08, -7.68402e-09, 1)
bones/10/position = Vector3(-6.58141e-07, 27.6145, -6.39347e-06)
bones/10/rotation = Quaternion(7.66276e-07, 1.14453e-07, 5.48429e-08, 1)
bones/11/position = Vector3(-3.00298, 3.78883, 2.16716)
bones/11/rotation = Quaternion(0.251894, -0.0594644, 0.221924, 0.940087)
bones/12/position = Vector3(3.08091e-11, 4.74498, 1.20503e-05)
bones/12/rotation = Quaternion(4.4761e-07, 2.69369e-07, -5.58773e-08, 1)
bones/13/position = Vector3(4.17235e-07, 4.38213, 1.76309e-05)
bones/13/rotation = Quaternion(7.27775e-07, -1.0394e-09, -2.04891e-07, 1)
bones/14/position = Vector3(-5.97545e-07, 3.45908, 1.36774e-05)
bones/15/position = Vector3(-2.82204, 12.2666, 0.231834)
bones/15/rotation = Quaternion(-1.6409e-07, 1.16529e-07, -2.37238e-07, 1)
bones/16/position = Vector3(-2.5012e-07, 3.89198, -7.47837e-06)
bones/16/rotation = Quaternion(-1.67293e-06, -1.41931e-08, -1.68467e-07, 1)
bones/17/position = Vector3(-1.92123e-07, 3.41517, -1.5207e-05)
bones/17/rotation = Quaternion(-2.62588e-08, 9.22775e-09, 1.13536e-07, 1)
bones/18/position = Vector3(-3.42484e-07, 3.078, -7.93042e-06)
bones/19/position = Vector3(-1.88015e-05, 12.7755, -8.90084e-07)
bones/19/rotation = Quaternion(-1.49023e-06, 8.75701e-08, 3.72816e-07, 1)
bones/20/position = Vector3(-9.55689e-09, 3.61397, 9.67869e-06)
bones/20/rotation = Quaternion(2.88821e-07, -5.66644e-08, -1.16269e-07, 1)
bones/21/position = Vector3(2.80512e-05, 3.45978, 7.14598e-06)
bones/21/rotation = Quaternion(5.68527e-07, 1.15082e-07, -4.12756e-09, 1)
bones/22/position = Vector3(-3.04048e-05, 3.6802, 4.78462e-06)
bones/23/position = Vector3(2.21663, 12.147, -0.00999328)
bones/23/rotation = Quaternion(-1.58812e-06, 1.82163e-07, 4.57688e-07, 1)
bones/24/position = Vector3(6.74014e-07, 3.60118, 1.46963e-05)
bones/24/rotation = Quaternion(8.82449e-07, -3.23953e-08, -1.20372e-07, 1)
bones/25/position = Vector3(-3.19079e-07, 3.30732, 6.97189e-06)
bones/25/rotation = Quaternion(3.67653e-07, 2.62845e-07, 8.405e-08, 1)
bones/26/position = Vector3(-2.3638e-05, 3.66012, 1.9074e-05)
bones/27/position = Vector3(4.72583, 10.9082, 0.226135)
bones/27/rotation = Quaternion(-1.38282e-06, 2.55455e-07, -1.99914e-07, 1)
bones/28/position = Vector3(-4.3383e-07, 4.13666, 6.70517e-06)
bones/28/rotation = Quaternion(1.60433e-06, -3.53546e-07, 2.32562e-08, 1)
bones/29/position = Vector3(1.60848e-06, 2.59483, -2.53178e-05)
bones/29/rotation = Quaternion(1.74385e-06, 5.59028e-07, 8.44988e-07, 1)
bones/30/position = Vector3(7.35187e-08, 2.92389, 1.55123e-05)
bones/31/position = Vector3(-6.1057, 9.10639, 0.757076)
bones/31/rotation = Quaternion(0.453804, -0.544876, 0.551112, 0.439828)
bones/32/position = Vector3(5.09534e-07, 12.9223, -2.75096e-05)
bones/32/rotation = Quaternion(-0.0104358, 0.00106128, -0.10115, 0.994816)
bones/33/position = Vector3(1.36647e-07, 27.4047, -7.43343e-06)
bones/33/rotation = Quaternion(1.94927e-07, 9.39901e-08, 2.65805e-08, 1)
bones/34/position = Vector3(1.36228e-05, 27.6145, 7.65566e-06)
bones/34/rotation = Quaternion(-2.36742e-07, -1.76434e-07, -1.1683e-07, 1)
bones/35/position = Vector3(3.00297, 3.78879, 2.16713)
bones/35/rotation = Quaternion(0.251896, 0.0594644, -0.221924, 0.940086)
bones/36/position = Vector3(5.12599e-06, 4.74495, 9.40645e-06)
bones/36/rotation = Quaternion(-1.04222e-06, -1.73099e-07, -6.09086e-07, 1)
bones/37/position = Vector3(-1.66891e-06, 4.38214, 2.41443e-05)
bones/37/rotation = Quaternion(-2.45307e-07, 6.58254e-07, 3.27826e-07, 1)
bones/38/position = Vector3(1.2856e-05, 3.45907, -3.01294e-05)
bones/39/position = Vector3(2.82204, 12.2666, 0.231816)
bones/39/rotation = Quaternion(-7.94997e-07, -7.98175e-08, -4.74572e-07, 1)
bones/40/position = Vector3(4.14245e-07, 3.89198, -9.14686e-06)
bones/40/rotation = Quaternion(1.46236e-06, 8.17035e-08, -1.04633e-08, 1)
bones/41/position = Vector3(1.72386e-08, 3.41517, -2.10165e-05)
bones/41/rotation = Quaternion(-1.52544e-07, -1.94936e-09, -1.06259e-07, 1)
bones/42/position = Vector3(-4.80673e-08, 3.078, -2.2078e-05)
bones/43/position = Vector3(1.71505e-05, 12.7755, -4.90337e-06)
bones/43/rotation = Quaternion(3.20494e-07, -1.9841e-08, -5.19228e-07, 1)
bones/44/position = Vector3(4.30426e-07, 3.61398, -2.10967e-05)
bones/44/rotation = Quaternion(-1.69612e-07, 9.6175e-08, 1.55776e-07, 1)
bones/45/position = Vector3(-2.87158e-05, 3.45976, -2.28587e-05)
bones/45/rotation = Quaternion(-5.68527e-07, -1.4272e-07, -2.35089e-08, 1)
bones/46/position = Vector3(2.86766e-05, 3.68019, -2.0147e-05)
bones/47/position = Vector3(-2.21663, 12.147, -0.0100166)
bones/47/rotation = Quaternion(5.3731e-07, -1.14645e-07, 4.02917e-07, 1)
bones/48/position = Vector3(3.6326e-07, 3.60121, -2.72164e-05)
bones/48/rotation = Quaternion(-7.49721e-07, -1.32709e-08, 6.90424e-08, 1)
bones/49/position = Vector3(-1.00253e-07, 3.30732, -4.4767e-06)
bones/49/rotation = Quaternion(3.34203e-08, 6.81883e-08, 2.32091e-07, 1)
bones/50/position = Vector3(2.38237e-05, 3.66011, -8.93061e-06)
bones/51/position = Vector3(-4.72583, 10.9082, 0.226109)
bones/51/rotation = Quaternion(1.9147e-07, -1.37464e-07, 3.7825e-07, 1)
bones/52/position = Vector3(-5.3385e-07, 4.13665, -1.44768e-05)
bones/52/rotation = Quaternion(-1.11184e-08, 2.61692e-08, -1.10525e-07, 1)
bones/53/position = Vector3(-9.71749e-07, 2.59485, -2.81133e-05)
bones/53/rotation = Quaternion(1.96019e-07, 2.29254e-08, -3.92856e-08, 1)
bones/54/position = Vector3(-1.20638e-06, 2.92389, -1.18539e-05)
bones/55/rotation = Quaternion(2.03362e-05, -0.00633988, 0.999976, -0.00296972)
bones/56/position = Vector3(1.02826e-06, 40.5994, 2.88683e-07)
bones/56/rotation = Quaternion(-0.0181341, 0.000182716, -0.00592014, 0.999818)
bones/57/rotation = Quaternion(0.540558, 0.014366, 0.0249509, 0.840814)
bones/58/rotation = Quaternion(0.227692, -0.0325216, -0.0153655, 0.973069)
bones/60/rotation = Quaternion(-1.82612e-05, -0.00633335, 0.999975, 0.00305726)
bones/61/position = Vector3(1.15409e-06, 40.5995, 5.31818e-07)
bones/61/rotation = Quaternion(-0.0181471, -0.000182865, 0.00592015, 0.999818)
bones/62/position = Vector3(-9.70403e-07, 42.099, 3.89413e-07)
bones/62/rotation = Quaternion(0.540563, -0.0143663, -0.0249517, 0.840811)
bones/63/position = Vector3(-4.39279e-07, 15.7216, -3.55283e-07)
bones/63/rotation = Quaternion(0.227709, 0.0321196, 0.0152578, 0.97308)
bones/64/position = Vector3(-3.7998e-07, 10, 2.08616e-07)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="WorldModel/YBotContainer/Y-Bot/Armature_019/Skeleton3D" index="0"]
transform = Transform3D(1.08115e-06, -1, -2.47543e-07, 1, 1.00038e-06, 2.33722e-07, -1.53537e-07, -2.53131e-07, 1, -73.783, -6.17136, -143.565)
bone_name = "mixamorig_RightHand"
bone_idx = 34
use_external_skeleton = true
external_skeleton = NodePath("..")

[node name="AnimationTree" type="AnimationTree" parent="WorldModel"]
root_node = NodePath("../YBotContainer/Y-Bot")
tree_root = SubResource("AnimationNodeStateMachine_1i2b7")
anim_player = NodePath("../YBotContainer/Y-Bot/AnimationPlayer")
parameters/Crouch/blend_position = Vector2(-0.00116825, 0.00191212)
parameters/Run/blend_position = Vector2(-0.976636, 0.0196078)
parameters/Walk/blend_position = Vector2(0.0899533, -0.0588236)

[node name="HeadOriginalPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00182773, 1.77034, -0.0149708)

[node name="Head" type="Node3D" parent="HeadOriginalPosition"]
unique_name_in_owner = true

[node name="CameraSmooth" type="Node3D" parent="HeadOriginalPosition/Head"]
unique_name_in_owner = true

[node name="Camera3D" type="Camera3D" parent="HeadOriginalPosition/Head/CameraSmooth"]
unique_name_in_owner = true

[node name="Interaction" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D" instance=ExtResource("8_h7bub")]

[node name="BulletCast" type="RayCast3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]

[node name="ViewModel" type="Node3D" parent="HeadOriginalPosition/Head/CameraSmooth/Camera3D"]
unique_name_in_owner = true

[node name="ThirdPersonOrbitCamYaw" type="Node3D" parent="HeadOriginalPosition"]
unique_name_in_owner = true

[node name="ThirdPersonOrbitCamPitch" type="Node3D" parent="HeadOriginalPosition/ThirdPersonOrbitCamYaw"]
unique_name_in_owner = true

[node name="SpringArm3D" type="SpringArm3D" parent="HeadOriginalPosition/ThirdPersonOrbitCamYaw/ThirdPersonOrbitCamPitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.841702, 0)
shape = SubResource("SphereShape3D_556q7")
spring_length = 1.75

[node name="ThirdPersonCamera" type="Camera3D" parent="HeadOriginalPosition/ThirdPersonOrbitCamYaw/ThirdPersonOrbitCamPitch/SpringArm3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.900402, 0.435058, 0, -0.435058, 0.900402, 0, 0.466446, 2.5366)
cull_mask = 1048319

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Reticle" type="CenterContainer" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_right = 41.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_7s5t5")
dot_color = Color(1, 1, 1, 0.388235)

[node name="InteractReticle" type="TextureRect" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -27.0
offset_right = 601.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
texture = ExtResource("10_rvh3j")

[node name="DialogueReticle" type="TextureRect" parent="UI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.0
offset_top = -18.0
offset_right = 777.0
offset_bottom = 809.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
texture = ExtResource("13_qr65u")

[node name="Audio" type="Node" parent="."]

[node name="Footsteps" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_oiv7x")
bus = &"Footsteps"
parameters/looping = true

[node name="Whoosh" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_wv8js")
bus = &"Whoosh"

[node name="WeaponManager" parent="." node_paths=PackedStringArray("player", "bullet_cast", "view_model_container", "world_model_container") instance=ExtResource("14_jbyi8")]
current_weapon = ExtResource("10_mxeln")
player = NodePath("..")
bullet_cast = NodePath("../HeadOriginalPosition/Head/CameraSmooth/Camera3D/BulletCast")
view_model_container = NodePath("../HeadOriginalPosition/Head/CameraSmooth/Camera3D/ViewModel")
world_model_container = NodePath("../WorldModel/YBotContainer/Y-Bot/Armature_019/Skeleton3D/BoneAttachment3D")

[node name="Label" type="Label" parent="WeaponManager"]
offset_right = 92.0
offset_bottom = 41.0
script = SubResource("GDScript_mdawi")

[node name="StairCasts" type="Node" parent="."]

[node name="StairsAheadCast" type="RayCast3D" parent="StairCasts"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.329413, -0.310484)
target_position = Vector3(0, -0.55, 0)

[node name="StairsBelowCast" type="RayCast3D" parent="StairCasts"]
unique_name_in_owner = true

[editable path="WorldModel/YBotContainer/Y-Bot"]
